Use java Optional instead of guava.